--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -40,7 +42,6 @@
 
 .head-text-container {
     background: url("Images/header.png") center;
-    /* border: 2px solid black; */
     background-repeat: no-repeat;
     text-align: center;
     background-size: 1300px;
@@ -49,8 +50,6 @@
     margin: auto;
     height: 540px;
     margin-bottom: 100px;
-    /* display: flex; */
-    /* justify-content: center; */
 }
 
 .head-text-container .shadow {
@@ -266,6 +265,7 @@
     background-repeat: no-repeat;
     height: 310px;
 }
+
 .img-04 {
     display: flex;
     width: 100%;
@@ -280,6 +280,7 @@
     background-repeat: no-repeat;
     height: 310px;
 }
+
 .img-05 {
     display: flex;
     width: 58%;
@@ -335,4 +336,169 @@
     display: flex;
     gap: 25px;
     margin-bottom: 25px;
+}
+
+/* Page - 04 */
+
+.choose-section {
+    max-width: 84%;
+    margin: 100px auto 50px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+/* Page - 07 */
+
+.newsletter {
+    max-width: 84%;
+    margin: 100px auto 50px;
+    margin-bottom: 100px;
+    display: flex;
+    gap: 24px;
+    position: relative;
+}
+
+.newsletter .signup-form {
+    width: 40%;
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding-left: 70px;
+    padding-top: 30px;
+}
+
+.newsletter .signup-form h4 {
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 16px;
+}
+
+.newsletter .signup-form p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 30px;
+    width: 70%;
+}
+
+.newsletter .signup-form .line {
+    color: rgba(19, 19, 24, 0.10);
+    width: 393px;
+    margin-bottom: 30px;
+}
+
+.newsletter .signup-form input {
+    display: flex;
+}
+
+.newsletter .signup-form input.text,
+.newsletter .signup-form input.email {
+    border: none;
+    outline: none;
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background-color: rgba(19, 19, 24, 0.05);
+    margin-bottom: 30px;
+    padding-left: 10px;
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.newsletter .signup-form input.btn-new {
+    border-radius: 8px;
+    background-color: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    width: 405px;
+    font-weight: 800;
+    padding: 14px 147px;
+    border: none;
+    cursor: pointer;
+}
+
+.newsletter-right {
+    width: 60%;
+}
+
+.newsletter .img-offer img {
+    width: 100%;
+}
+
+.newsletter .text-newsletter {
+    border-radius: 16px;
+    background: #FF5400;
+    width: 324px;
+    height: 100px;
+    transform: rotate(-19.628deg);
+    text-align: center;
+    padding-top: 20px;
+    position: absolute;
+    top: 275px;
+    right: 11px;
+}
+
+.newsletter .text-newsletter p {
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.newsletter .text-newsletter h4 {
+    color: #FFF;
+    font-size: 32px;
+    font-weight: 800;
+}
+
+/* Footer Page - 08 */
+
+.footer {
+    background: rgba(19, 19, 24, 0.05);
+    text-align: center;
+    padding-top: 100px;
+}
+
+/* .footer-container .img-foot{
+    margin-top: 100px;
+} */
+
+.footer .footer-heading h4 {
+    /* display: inline; */
+    color: #131318;
+    font-size: 36px;
+    font-weight: 800;
+}
+
+.footer-container .img-foot {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+
+.footer-container .footer-description {
+    color: #5A5A5D;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    width: 50%;
+    margin: 15px auto 33px;
+}
+
+.line-02 {
+    width: 872px;
+    margin: 50px auto;
+    color: rgba(19, 19, 24, 0.10);
+}
+
+.copyright {
+    color: #131318;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    padding-bottom: 100px;
 }
